# docker-stickerpicker

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/workflows/: docker.yml
src/: main.rs
