# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "stickerpicker"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0"
clokwerk = "0.3.5"
env_logger = "0.9.0"
futures-util = "0.3.15"
git2 = "0.15"
gotham = { version = "0.7", features = ["derive"], default-features = false }
indexmap = { version = "1.9", features = ["serde"] }
log = "0.4"
mime_guess = "2.0"
once_cell = "1.8"
rust-s3 = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.2"
